openshift/routes/cfapi-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cf-cfapi
  namespace: codefresh-dev
spec:
  host: codefresh-dev.v12.np01.ocp.six-group.net
  path: /api
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: cf-cfapi
    weight: 100
  # wildcardPolicy: None
