openshift/routes/cfnomios-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cf-nomios
  namespace: codefresh
spec:
  host: codefresh-dev.v12.np01.ocp.six-group.net
  path: /nomios
  port:
    targetPort: 80
  to:
    kind: Service
    name: cf-nomios
    weight: 100
  tls:
    termination: edge
  # wildcardPolicy: None
