openshift/routes/cfws-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cf-ws
  namespace: codefresh
spec:
  host: g.apps-os-t1.cf-cd.com
  path: /ws
  port:
    targetPort: 80
  tls:
    termination: edge
  to:
    kind: Service
    name: cf-cfapi
    weight: 100
  # wildcardPolicy: None
